Fixed Overflow2

--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -43,6 +43,6 @@
     font-size: 3rem;
     width: 95%;
     padding: 1rem;
-    margin-top: -12.8rem;
+    margin-top: -13.8rem;
   }
 }
